[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=9.2.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sharkiq"
dynamic = ["version"]
description = "Python API for Shark IQ robots"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "sharkiqlibs Maintainers"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "aiohttp>=3.8.1",
    "auth0-python>=4.10.0",
    "requests>=2.27.1",
]

[project.urls]
Homepage = "https://github.com/sharkiqlibs/sharkiq"
Repository = "https://github.com/sharkiqlibs/sharkiq"
Issues = "https://github.com/sharkiqlibs/sharkiq/issues"

[project.optional-dependencies]
test = [
    "pytest==8.4.2",
    "pytest-asyncio==1.2.0",
    "pytest-cov==7.0.0",
]
dev = [
    "pytest==8.4.2",
    "pytest-asyncio==1.2.0",
    "pytest-cov==7.0.0",
    "build==1.3.0",
]

[tool.setuptools]
packages = ["sharkiq"]

[tool.setuptools_scm]
version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"